name:                pwdhash
version:             0.2.2.0
synopsis:            Implementation of the pwdhash algorithm
description:
  A Haskell implementation of the algorithm for generating password
  hashes described at https://www.pwdhash.com/.
license:             BSD3
license-file:        LICENSE
author:              Itai Zukerman
maintainer:          zukerman@math-hat.com
copyright:           (c) 2012 Itai Zukerman
category:            Util
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Codec.Pwdhash
  build-depends:       base >=4.16 && <4.17,
                       Crypto,
                       dataenc,
                       transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

executable pwdhash
  main-is:             pwdhash.hs
  build-depends:       base >=4.16 && <4.17,
                       haskeline,
                       pwdhash
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

test-suite regression
  type:                exitcode-stdio-1.0
  main-is:             regression.hs
  build-depends:       base >=4.16 && <4.17,
                       QuickCheck,
                       process,
                       pwdhash,
                       test-framework,
                       test-framework-quickcheck2
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
